fix(backend): fix arraylist method